# SEN55-ILI9486-Air-Quality-Sensor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SEN55-ILI9486-Air-Quality-Sensor.ino  main_pc.cpp
.agent/: emulator-testing-docs-update.md  next-steps-integration-testing.md  spec-update-refinements.md
.agent/workflows/: opsx-onboard.md
.github/workflows/: arduino.yml  emulator.yml  integration-test.yml  tests.yml  wasm.yml
build_final/tests/: UnitTests
openspec/: config.yaml
openspec/changes/archive/2026-02-16-resolve-macro-redundancy/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-17-implement-component-tests-and-refine-specs/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-17-refactor-ci-tests/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-17-separate-tests/: README.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-17-update-gh-actions-v4/: design.md  proposal.md  specs.md  tasks.md
openspec/changes/archive/2026-02-20-abstract-time-provider/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-20-refactor-app-loop-debounce/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-21-fix-tp-init-calibration/: design.md  proposal.md  tasks.md
openspec/specs/: hardware-spec.md  project-overview.md  software-architecture.md
openspec/specs/ci-pipeline/: spec.md
openspec/specs/display-integration-test/: spec.md
openspec/specs/emulator-split/: spec.md
openspec/specs/github-workflow-configuration/: spec.md
openspec/specs/interaction-testing/: spec.md
openspec/specs/non-blocking-debounce/: spec.md
openspec/specs/standardized-logging/: spec.md
openspec/specs/test-independence/: spec.md
openspec/specs/test-infrastructure-separation/: spec.md
openspec/specs/time-management/: spec.md
openspec/specs/touch-initialization/: spec.md
src/App/: App.cpp  App.h  EmulatorEngine.cpp  EmulatorEngine.h
src/Display/: DEV_Config.cpp  DEV_Config.h  LCD_Driver_SDL.cpp  LCD_GUI.cpp  LCD_Touch.cpp
tests/: CMakeLists.txt  emulator_test.cpp
tests/integration/: display_integration_test.cpp
tests/unit/: debounce_performance_test.cpp  emulator_test.cpp
(+10 files in other folders)
